--- a/src/entrypoints/options/index.html
+++ b/src/entrypoints/options/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Superfill.ai - Popup</title>
+  <title>Superfill.ai - Settings</title>
   <meta name="manifest.type" content="browser_action" />
+  <meta name="manifest.open_in_tab" content="true" />
 </head>
 
 <body>
