--- a/src/entrypoints/popup/index.html
+++ b/src/entrypoints/popup/index.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Superfill.ai - Popup</title>
   <meta name="manifest.type" content="browser_action" />
+  <style>
+    html,
+    body,
+    #root {
+      width: 400px;
+      height: 600px;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body>
